--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,45 @@
 <div class="container">
   <header class="jumbotron">
-    <p>{{ content }}</p>
+
+    <div class="input-group px-4">
+      <span class="input-group-text">Find by:</span>
+      <input type="text" placeholder="Book name" id="nameText"  class="form-control">
+      <input type="text" placeholder="Author" id="authorText"  class="form-control">
+      <input type="text" placeholder="Genre" id="genreText"  class="form-control">
+      <button class="btn btn-info" type="button" id="findButton">Find</button>
+    </div>
+
+
+      <table class="table table-striped table-success table-hover">
+        <thead>
+        <tr class="text-black bgc-default-tp1 py-25">
+          <th>Book name</th>
+          <th class="col-2">Author</th>
+          <th class="col-2">Genre</th>
+          <th class="col-2">Pages</th>
+          <th class="col-2">Publication date</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let row of books">
+          <td>{{row.bookName}}</td>
+          <td>{{row.author}}</td>
+          <td>{{row.genre}}</td>
+          <td>{{row.pages}}</td>
+          <td>{{row.publicationDate}}</td>
+        </tr>
+        </tbody>
+
+      </table>
   </header>
 </div>
+
+
+<!--<table class="table table-striped table-borderless border-0 border-b-2 brc-default-l1 ">
+  <div class="row  row-primary text-600 text-black bgc-default-tp1 py-25">
+    <div class="col-9 col-sm-3">Book name</div>
+    <div class="d-none d-sm-block col-4 col-sm-2">Author</div>
+    <div class="d-none d-sm-block col-sm-2">Genre</div>
+    <div class="col-2">Amount</div>
+    <div class="col-2">Publication date</div>
+  </div>-->
