--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,17 @@
 <div class="container">
   <header class="jumbotron">
 
+    <form name="form" (ngSubmit)="onSubmit()" #f="ngForm" novalidate>
+
     <div class="input-group px-4">
       <span class="input-group-text">Find by:</span>
-      <input type="text" placeholder="Book name" id="nameText"  class="form-control">
-      <input type="text" placeholder="Author" id="authorText"  class="form-control">
-      <input type="text" placeholder="Genre" id="genreText"  class="form-control">
-      <button class="btn btn-info" type="button" id="findButton">Find</button>
+      <input type="text" placeholder="Book name" class="form-control" name="bookName"
+              [(ngModel)]="form.bookName" required #BookName="ngModel">
+      <input type="text" placeholder="Author" class="form-control" name="author"
+              [(ngModel)]="form.author" required #author="ngModel">
+      <input type="text" placeholder="Genre" class="form-control" name="genre"
+              [(ngModel)]="form.genre" required #genre="ngModel" >
+      <button class="btn btn-info">Find</button>
     </div>
 
 
@@ -29,17 +34,12 @@
           <td>{{row.publicationDate}}</td>
         </tr>
         </tbody>
-
       </table>
+      <div *ngIf="isPressedFind">
+      <button class="btn btn-secondary mr-1" type="reset" (click)="onReset()">Reset</button>
+      </div>
+    </form>
   </header>
 </div>
 
 
-<!--<table class="table table-striped table-borderless border-0 border-b-2 brc-default-l1 ">
-  <div class="row  row-primary text-600 text-black bgc-default-tp1 py-25">
-    <div class="col-9 col-sm-3">Book name</div>
-    <div class="d-none d-sm-block col-4 col-sm-2">Author</div>
-    <div class="d-none d-sm-block col-sm-2">Genre</div>
-    <div class="col-2">Amount</div>
-    <div class="col-2">Publication date</div>
-  </div>-->
